--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # This file lists all contributors to the repository.
 
 Sarah Khalid Aldawsari <skalrashed02@hotmail.com>
-Noura Mohammed Alsubaie <>
+Noura Mohammed Alsubaie <0nourasubaie@gmail.com>
